# Agent-Code-Oracle

./: .gitignore  CHANGELOG.md  README.md  oracle.config.example.json  pyproject.toml
.claude/skills/code-oracle/: SKILL.md
.claude/skills/code-oracle/references/: contract-types.md  kg-schema.md  prompt-templates.md  repomap-integration.md
docs/: architecture.md  community-evaluation.md  red-phase.md
docs/quickstart/: python.md
examples/game-project/: guard-rule.md  oracle.config.json
hooks/: post-merge
plans/: README.md  phase-a-correctness-fixes.md  phase-b-diagnostics.md  phase-c-data-quality.md  phase-d-driver.md  phase-e-experience.md
scripts/: backfill_hashes.py  blind_spot_filter.py  contract_validator.py  freshness_checker.py  incremental_scanner.py  kg_injector.py  oracle_config.py  oracle_sync.py  pipeline.py  repomap_bridge.py  round_artifacts.py  round_driver.py  semantic_dedup.py
scripts/providers/: __init__.py  base.py  dry_run_provider.py  grep_provider.py
scripts/templates/: round1_architect.txt  round2_contract_mining.txt
templates/: round3_devils_advocate.txt
tests/: test_blind_spot_filter.py  test_contract_validator.py  test_grep_provider.py  test_incremental_scanner.py  test_kg_injector.py  test_oracle_config.py  test_pipeline.py  test_repomap_bridge.py  test_round_driver.py  test_semantic_dedup.py
tests/fixtures/: grep-smoke-config.json  grep-smoke-round3.json  sample-contracts.json  sample-l3.md
tests/fixtures/multi_class_module/: Controllers.cs  README.txt  Repositories.cs
tests/fixtures/multi_class_module/sub/: EventBus.cs  Notifications.cs
